--- a/app/views/login.html
+++ b/app/views/login.html
@@ -5,12 +5,13 @@ Inspired by http://dribbble.com/shots/917819-iPad-Calendar-Login?list=shots&sort
 	<div class="row">
 		<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
         	<img src="images/flat-avatar.png" class="user-avatar" />
-			<h1>Ani Theme <small>Free Edition</small></h1>
+			<h1>SYSBUS</h1> 
+			<h1><small>SISTEMA DE VENTA Y RESERVA DE PASAJES</small></h1>
 			<form role="form" ng-submit="submit()">
 
 				<div class="form-content">
 					<div class="form-group">
-						<input type="text" class="form-control input-underline input-lg" id="" placeholder="Email">
+						<input type="text" class="form-control input-underline input-lg" id="" placeholder="Nombre de usuario">
 					</div>
 
 					<div class="form-group">
@@ -18,7 +19,7 @@ Inspired by http://dribbble.com/shots/917819-iPad-Calendar-Login?list=shots&sort
 					</div>
 				</div>
 
-				<button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">Login</button>
+				<button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">Iniciar Sesion</button>
 
 			</form>
 
