--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -6,7 +6,7 @@
         <div class="text-center">
           <h2 class="brand">{{DBC.view.title}} <small>BETA</small></h2>
           <img src="images/flat-avatar.png" class="user-avatar" /><br />
-          <a ui-sref="login" class="btn btn-white btn-outline btn-rounded btn-sm">Logout</a>
+          <a ui-sref="login" class="btn btn-white btn-outline btn-rounded btn-sm">Cerrar Sesion</a>
         </div>
 
         <ul class="nav nav-sidebar">
