--- a/app/views/dashboard/overview.html
+++ b/app/views/dashboard/overview.html
@@ -1,13 +1,11 @@
 <div>
-	<a ui-sref="reports" class="pull-right btn btn-primary btn-outline btn-rounded">Reports</a>
-	<h2>Overview <small>Why is Ani Theme so awesome?</small></h2>
+	<a ui-sref="reports" class="pull-right btn btn-primary btn-outline btn-rounded">Reportes</a>
+	<h2>Sistema de venta y reserva de pasajes	</h2>
 	<div class="jumbotron">
 		<div class="container">
-			<h1>Welcome!</h1>
-			I don't want to bloat this Ani Theme Free Edition AngularJS Admin theme with a lot of plugins. To install plugins we have bower. Let's keep it real clean!<br /><br />
-			<p>
-				<a class="btn btn-primary btn-lg btn-outline btn-rounded">Learn more</a>
-			</p>
+			<h1>Bienvenido!!!</h1>
+			<br /><br />
+			<img src="images/bus1.jpg" class="img-responsive" alt="Responsive image">
 		</div>
 	</div>
 </div>
