--- a/app/views/dashboard/user/user.list.html
+++ b/app/views/dashboard/user/user.list.html
@@ -1,5 +1,5 @@
 <div>
-	<a ui-sref="overview" class="pull-right btn btn-primary btn-outline btn-rounded">Back to Overview</a>
+	<a ui-sref="newuser" class="pull-right btn btn-primary btn-outline btn-rounded">Nuevo</a>
 	<h2>Usuarios</h2>
 	<span class="glyphicon glyphicon-dashboard bg-fade"></span>
 	<div class="jumbotron">
@@ -13,7 +13,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="user in ULC.users.list">
+					<tr ng-repeat="user in ULC.users.list" ng-click="ULC.view.edit(user)">
 						<td>{{user.name}}</td>
 						<td>{{user.lastname}}</td>
 						<td>{{user.username}}</td>
