--- a/app/views/dashboard/ticket/ticket.list.html
+++ b/app/views/dashboard/ticket/ticket.list.html
@@ -1,5 +1,5 @@
 <div>
-	<a ui-sref="ticket" class="pull-right btn btn-primary btn-outline btn-rounded">Nuevo</a>
+	<a ui-sref="newticket" class="pull-right btn btn-primary btn-outline btn-rounded">Nuevo</a>
 	<h2>Vehiculo</h2>
 	<span class="glyphicon glyphicon-dashboard bg-fade"></span>
 	<div class="jumbotron">
@@ -13,7 +13,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="ticket in TLC.tickets.list" ng-click="tLC.view.edit(ticket)">
+					<tr ng-repeat="ticket in TLC.tickets.list" ng-click="TLC.view.edit(ticket)">
 						<td>{{ticket.placa}}</td>
 						<td>{{ticket.Colour}}</td>
 						
