added high charts implementation

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -26,3 +26,13 @@
 html,body {
 	overflow: hidden;
 }
+
+.field-free {
+	background-color: rgba(57, 232, 79, 0.67);
+}
+.field-reserved {
+	background-color: rgba(232, 219, 57, 0.67);
+}
+.field-sold {
+	background-color: rgba(171, 10, 10, 0.74);
+}
