--- a/app/views/dashboard/reports/reports.list.html
+++ b/app/views/dashboard/reports/reports.list.html
@@ -4,22 +4,12 @@
 	<span class="glyphicon glyphicon-dashboard bg-fade"></span>
 	<div class="jumbotron">
 		<div class="container">
-
-
-		
-		<div class="col-sm-6">
-			<div id="container">
-			
-        
-
+			<div class="col-sm-6">
+				<div id="linechart"></div>
 			</div>
-
-		</div>
-		<div class="col-sm-6">
-			<div id="container1"></div>
-		</div>
-		
-			
+			<div class="col-sm-6">
+				<div id="piechart"></div>
+			</div>
 		</div>
 	</div>
 </div>
